--- a/css/style_registration.scss
+++ b/css/style_registration.scss
@@ -208,6 +208,7 @@
   #please_enter_firstname,
   #please_enter_lastname,
   #please_enter_phonenumber,
+  #please_enter_email,
   #please_enter_privacy,
   #valid_email {
     color: #d9534f;
