--- a/css/style_contact.scss
+++ b/css/style_contact.scss
@@ -1,11 +1,9 @@
 .contact {
-  width: 100%;
-  padding-left: 300px;
-  padding-right: 40px;
-  margin-bottom: 80px;
+  margin: 0px auto 80px;
+  padding: 0px 20px;
   display: flex;
   flex-direction: column;
-  align-items: start;
+  align-items: center;
   gap: 30px;
 
   .form-section {
@@ -15,7 +13,7 @@
       padding: 10px 0;
       color: rgb(51, 51, 51);
       display: flex;
-      align-items: end;
+      align-items: center;
       p {
         font-size: 18px;
         font-weight: 700;
