--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -3150,6 +3150,7 @@ main#main .disabled {
   opacity: 0.5;
 }
 main#main .first {
+  display: none;
   width: 375px;
   background-color: rgba(255, 255, 255, 0.6);
   margin-left: auto;
@@ -3262,7 +3263,7 @@ main#main .disabled {
   opacity: 0.5;
 }
 main#main .second {
-  display: none;
+  display: block;
   width: 375px;
   background-color: rgba(255, 255, 255, 0.8);
   position: relative;
