--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -3033,6 +3033,11 @@ main#main {
   overflow-y: scroll;
   height: 600px;
 }
+@media only screen and (max-width:640px) {
+  main#main {
+    background-image: url("../img/bg-smp.webp") !important;
+  }
+}
 main#main .common-title {
   font-family: Inter;
   margin-top: 16px;
