--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -3035,7 +3035,9 @@ main#main {
 }
 @media only screen and (max-width:640px) {
   main#main {
-    background-image: url("../img/bg-smp.webp") !important;
+    background: rgb(0, 137, 123, 0.35) !important;
+    background-image: none;
+    /*background-image: url("../img/bg-smp.webp") !important;*/
   }
 }
 main#main .common-title {
