--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -3334,8 +3334,9 @@ main#main .second-head .step-text .step-check {
   font-weight: bold;
 }
 main#main .second-head .step-text .step-check .span-check {
-  font-size: 14px;
+  font-size: 13px;
   color: #c88282;
+  font-weight: normal;
 }
 main#main .second-head .step-road .road-bar {
   background-color: #d9d9d9;
