--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -21,7 +21,7 @@ html {
 
 body {
   position: relative;
-  font-family: "Arial", "メイリオ", sans-serif;
+  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
   font-weight: normal;
   font-size: 1.8rem;
   line-height: 1.5;
@@ -121,7 +121,7 @@ video {
   font-size: 100%;
   font: inherit;
   vertical-align: baseline;
-  font-family: "Arial", "メイリオ", sans-serif;
+  font-family: "Helvetica Neue", Arial, "Hiragino Kaku Gothic ProN", "Hiragino Sans", Meiryo, sans-serif;
 }
 
 article,
