トップページのステップの文字サイズの変更10

--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -239,6 +239,7 @@ button {
 button, input, select, textarea {
   font-family: inherit;
   font-size: 100%;
+  font-weight: 600;
 }
 
 input[type=radio],
