--- a/lp-1/assets/css/style.css
+++ b/lp-1/assets/css/style.css
@@ -4689,9 +4689,8 @@ main#main .success_modal .modal-content .close-button:focus {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  gap: 10rem;
   text-align: center;
-  height: 85vh;
+  min-height: 85vh;
 }
 .thanks h2 {
   font-size: 6.4rem;
